Fix #183 per @connesc advice